// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/MinHeight handles % value 1`] = `
{
  "classNames": [
    "--type-literal",
  ],
  "variables": {
    "--rs-min-h-s": "50%",
  },
}
`;

exports[`Styles/MinHeight handles px value 1`] = `
{
  "classNames": [
    "--type-literal",
  ],
  "variables": {
    "--rs-min-h-s": "50px",
  },
}
`;

exports[`Styles/MinHeight handles responsive value 1`] = `
{
  "classNames": [
    "--type-literal",
    "--type-literal--l",
  ],
  "variables": {
    "--rs-min-h-l": "50%",
    "--rs-min-h-s": "50px",
  },
}
`;

exports[`Styles/MinHeight handles undefined value 1`] = `null`;

exports[`Styles/MinHeight handles unit value 1`] = `
{
  "classNames": [
    "--type-unit",
  ],
  "variables": {
    "--rs-min-h-s": 5,
  },
}
`;
